reafactor to jvm 8 List